@@ -129,6 +129,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 == Changelog ==
 
 = 8.4.0 - xxxx-xx-xx =
+* Tweak - Update WooCommerce.com docs links.
 * Fix - Correctly setting the preferred card brand when creating and updating a payment intent.
 * Fix - Added a feedback message + redirection back to cart when a Cash App payment fails.
 * Tweak - Update WordPress.org screenshots and captions.
